--- a/reservation-form.html
+++ b/reservation-form.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>the master branch version</p>
+    <p>reserve-court branch version 3</p>
 </body>
 </html>
